--- a/BertScout2022/BertScout2022/MainPage.xaml
+++ b/BertScout2022/BertScout2022/MainPage.xaml
@@ -109,7 +109,7 @@
                         />
                     </StackLayout>
                     <AbsoluteLayout
-                            x:Name="DeleteMatch"
+                            x:Name="Delete_Match_Popup"
                             IsVisible="false"
                             >
                         <Frame
