changed credits, added easter eggs

--- a/BertScout2022/BertScout2022/MainPage.xaml
+++ b/BertScout2022/BertScout2022/MainPage.xaml
@@ -700,6 +700,7 @@
                         />
                     </StackLayout>
                     <Label
+                        x:Name="credits"
                             TextColor="Green"
                             Text="Made by: Finn, Scott, and Keith"
                             />
