--- a/BertScout2022/BertScout2022/MainPage.xaml
+++ b/BertScout2022/BertScout2022/MainPage.xaml
@@ -120,27 +120,64 @@
                                 >
                             <AbsoluteLayout>
                                 <Button
-                                x:Name="Delete_Match"
-                                BackgroundColor="Red"
-                                WidthRequest="200"
-                                HeightRequest="50"
-                                Text="Delete Match"
-                                Clicked="Delete_Match_Clicked"
+                                    x:Name="Delete_Match"
+                                    BackgroundColor="Red"
+                                    WidthRequest="200"
+                                    HeightRequest="50"
+                                    Text="Delete Match"
+                                    Clicked="Delete_Match_Clicked"
                                 />
                                 <Entry
-                                x:Name="Delete_Match_Password"
-                                Margin="210,0,10,0"
-                                WidthRequest="302"
-                                HeightRequest="50"
-                                FontSize="20"
+                                    x:Name="Delete_Match_Password"
+                                    Margin="210,0,10,0"
+                                    WidthRequest="302"
+                                    HeightRequest="50"
+                                    FontSize="20"
                                     IsPassword="True"
-                                VerticalTextAlignment="Start"
-                                HorizontalTextAlignment="Start"
-                                TextColor="Green"
-                                BackgroundColor="#bfbfbf"
-                                Text=""
+                                    VerticalTextAlignment="Start"
+                                    HorizontalTextAlignment="Start"
+                                    TextColor="Green"
+                                    BackgroundColor="#bfbfbf"
+                                    Text=""
                                 />
                             </AbsoluteLayout>
+                        </Frame>
+                    </AbsoluteLayout>
+                    <AbsoluteLayout
+                        x:Name="Message_Popup"
+                        IsVisible="false"
+                        HorizontalOptions="CenterAndExpand"
+                        >
+                        <Frame
+                            CornerRadius="30"
+                            BorderColor="#008000"
+                            BackgroundColor="Red"
+                            Margin="0,0,10,0"
+                            HorizontalOptions="FillAndExpand"
+                            HeightRequest="50"
+                            VerticalOptions="Center"
+                            >
+                            <StackLayout
+                                Orientation="Horizontal"
+                                >
+                                <Label
+                                    x:Name="Message_Popup_Label"
+                                    HorizontalOptions="FillAndExpand"
+                                    Text=""
+                                    >
+                                </Label>
+                                <Button
+                                    x:Name="Message_Popup_OK"
+                                    BackgroundColor="#bfbfbf"
+                                    WidthRequest="50"
+                                    HorizontalOptions="End"
+                                    TextColor="Black"
+                                    FontSize="15"
+                                    Text="OK"
+                                    Clicked="Message_Popup_Clicked_OK"
+                                    >
+                                </Button>
+                            </StackLayout>
                         </Frame>
                     </AbsoluteLayout>
                     <StackLayout
